infra/k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: backend
spec:
    replicas: 1
    selector:
        matchLabels:
            app: backend
    template:
        metadata:
            labels:
                app: backend
        spec:
            imagePullSecrets:
                - name: ecr-secret
            containers:
                - name: backend
                  image: 673436240700.dkr.ecr.us-west-1.amazonaws.com/backend:latest
                  ports:
                      - containerPort: 8080
                  livenessProbe:
                      httpGet:
                          path: /api/health
                          port: 8080
                      initialDelaySeconds: 30
                      periodSeconds: 10
                  readinessProbe:
                      httpGet:
                          path: /api/health
                          port: 8080
                      initialDelaySeconds: 20
                      periodSeconds: 5
                  resources:
                      requests:
                          memory: "128Mi"
                          cpu: "250m"
                      limits:
                          memory: "256Mi"
                          cpu: "500m"
