infra/k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: frontend
spec:
    replicas: 1
    selector:
        matchLabels:
            app: frontend
    template:
        metadata:
            labels:
                app: frontend
        spec:
            imagePullSecrets:
                - name: ecr-secret
            containers:
                - name: frontend
                  image: 673436240700.dkr.ecr.us-west-1.amazonaws.com/frontend:latest
                  ports:
                      - containerPort: 5173
