infra/k8s/mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: mongo
spec:
    replicas: 1
    selector:
        matchLabels:
            app: mongo
    template:
        metadata:
            labels:
                app: mongo
        spec:
            containers:
                - name: mongo
                  image: mongo:7
                  ports:
                      - containerPort: 27017
