infra/k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: frontend-service
spec:
    selector:
        app: frontend
    ports:
        - port: 5173
          targetPort: 5173
    type: NodePort
