infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: app-ingress
spec:
    rules:
        - host: foodapp.local
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: frontend-service
                            port:
                                number: 5173

                  - path: /api
                    pathType: Prefix
                    backend:
                        service:
                            name: backend-service
                            port:
                                number: 8080
